# mapviz

mapviz/include/mapviz/: mapviz_plugin.h
mapviz/src/: mapviz.cpp  mapviz.ui
mapviz/src/resources/: LICENSE  icons.qrc
mapviz_plugins/: CMakeLists.txt  mapviz_plugins.xml  package.xml
mapviz_plugins/include/mapviz_plugins/: draw_waypoints_plugin.h  image_plugin.h  matcher_plugin.h  ugi_basestation_plugin.h  ugi_basestation_plugin_dynamic_param.h  ugi_diagnostics_plugin.h
mapviz_plugins/src/: draw_waypoints_plugin.cpp  image_plugin.cpp  matcher_plugin.cpp  move_base_plugin.cpp  ugi_basestation_plugin.cpp  ugi_basestation_plugin_dynamic_param.cpp  ugi_diagnostics_plugin.cpp
mapviz_plugins/ui/: draw_waypoints_config.ui  matcher_config.ui  move_base_config.ui  ugi_basestation_config.ui  ugi_diagnostics_config.ui
origin_transform/: CMakeLists.txt  package.xml
origin_transform/cfg/: origin_transform.cfg
origin_transform/include/origin_transform/: origin_transform.h
origin_transform/node/: origin_transform_node.cpp
origin_transform/src/: origin_transform.cpp
